--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
   "author": "Kevin Barabash <kevinb7@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "math-parser": "^0.4.0",
+    "math-parser": "^0.4.1",
     "math-traverse": "^0.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.15.0",
     "mocha": "^3.3.0",
+    "pre-commit": "^1.1.3",
+    "precommit-hook": "^3.0.0",
     "webpack": "^2.4.1"
   },
+  "pre-commit": ["lint"],
   "scripts": {
-    "test": "mocha test --compilers js:babel-register"
+    "test": "mocha test --compilers js:babel-register",
+    "lint": "eslint ./ --cache --ignore-pattern .gitignore" 
   }
 }
