--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kevin Barabash <kevinb7@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "math-nodes": "^0.0.1",
     "math-parser": "^0.5.3",
     "math-traverse": "^0.2.1"
   },
