--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "math-rules",
-  "version": "0.0.1",
-  "main": "index.js",
+  "version": "0.1.0",
+  "main": "dist/math-rules.js",
   "repository": "https://github.com/semantic-math/math-rules",
   "author": "Kevin Barabash <kevinb7@gmail.com>",
   "license": "MIT",
@@ -25,7 +25,8 @@
     "lint"
   ],
   "scripts": {
+    "prepublish": "webpack",
     "test": "mocha test --compilers js:babel-register",
-    "lint": "eslint . --cache --ignore-pattern .gitignore"
+    "lint": "eslint . --cache --ignore-path .gitignore"
   }
 }
