--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "math-rules",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "main": "dist/math-rules.js",
   "repository": "https://github.com/semantic-math/math-rules",
   "author": "Kevin Barabash <kevinb7@gmail.com>",
@@ -26,6 +26,7 @@
   ],
   "scripts": {
     "prepublish": "webpack",
+    "watch": "webpack -w",
     "test": "mocha test --compilers js:babel-register",
     "lint": "eslint . --cache --ignore-path .gitignore"
   }
