--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "math-evaluator": "^0.0.4",
     "math-nodes": "^0.1.0",
-    "math-parser": "^0.8.0",
+    "math-parser": "^0.9.0",
+    "math-rules": "^0.2.10",
     "math-traverse": "^0.2.1"
   },
   "devDependencies": {
