update lint rules to disallow nested ternaries

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,21 +13,11 @@
         "sourceType": "module"
     },
     "rules": {
-        "indent": [
-            "error",
-            4
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ]
+        "indent": ["error", 4],
+        "linebreak-style": ["error", "unix"],
+        "quotes": ["error", "single"],
+        "semi": ["error", "never"],
+        "no-nested-ternary": "error",
+        "space-infix-ops": "error"
     }
 }
